Changelog
=========

2.13.1 (unreleased)
-------------------

- Lexicon: Removed BBB code for instances created with Zope < 2.6.2.

- Added missing namespace_packages declaration to setup.py.

2.13.0 (2010-06-19)
-------------------

- Released as separate package.